@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,17 @@
 
 package org.springframework.integration.jdbc;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
 import org.springframework.jdbc.core.namedparam.AbstractSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.BeanPropertySqlParameterSource;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.SqlParameterSource;
 
 /**
  * A default implementation of {@link SqlParameterSourceFactory} which creates an {@link SqlParameterSource} to
- * reference bean properties in its input.
+ * reference bean properties (or map keys) in its input.
  *
  * @author Dave Syer
  * @author Gary Russell
@@ -36,16 +36,15 @@ import org.springframework.jdbc.core.namedparam.SqlParameterSource;
  */
 public class BeanPropertySqlParameterSourceFactory implements SqlParameterSourceFactory {
 
-	private Map<String, Object> staticParameters = Collections.unmodifiableMap(new HashMap<>());
+	private final Map<String, Object> staticParameters = new HashMap<>();
 
 	/**
 	 * If the input is a List or a Map, the output is a map parameter source, and in that case some static parameters
 	 * can be added (default is empty). If the input is not a List or a Map then this value is ignored.
-	 *
 	 * @param staticParameters the static parameters to set
 	 */
 	public void setStaticParameters(Map<String, Object> staticParameters) {
-		this.staticParameters = staticParameters;
+		this.staticParameters.putAll(staticParameters);
 	}
 
 	@Override
@@ -55,19 +54,25 @@ public class BeanPropertySqlParameterSourceFactory implements SqlParameterSource
 
 	private static final class StaticBeanPropertySqlParameterSource extends AbstractSqlParameterSource {
 
-		private final BeanPropertySqlParameterSource input;
+		private final SqlParameterSource input;
 
 		private final Map<String, Object> staticParameters;
 
+		@SuppressWarnings("unchecked")
 		StaticBeanPropertySqlParameterSource(Object input, Map<String, Object> staticParameters) {
-			this.input = new BeanPropertySqlParameterSource(input);
+			this.input =
+					input instanceof Map
+							? new MapSqlParameterSource((Map<String, Object>) input)
+							: new BeanPropertySqlParameterSource(input);
+
 			this.staticParameters = staticParameters;
 		}
 
 		@Override
 		public Object getValue(String paramName) throws IllegalArgumentException {
-			return this.staticParameters.containsKey(paramName) ? this.staticParameters.get(paramName) : this.input
-					.getValue(paramName);
+			return this.staticParameters.containsKey(paramName)
+					? this.staticParameters.get(paramName)
+					: this.input.getValue(paramName);
 		}
 
 		@Override
