@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,14 +30,11 @@ import org.springframework.util.StringUtils;
 /**
  * @author Dave Syer
  * @author Artem Bilan
+ *
  * @since 2.0
  *
  */
 public class JdbcMessageHandlerParser extends AbstractOutboundChannelAdapterParser {
-
-	protected boolean shouldGenerateId() {
-		return false;
-	}
 
 	protected boolean shouldGenerateIdAsFallback() {
 		return true;
@@ -72,6 +69,8 @@ public class JdbcMessageHandlerParser extends AbstractOutboundChannelAdapterPars
 			builder.addConstructorArgReference(jdbcOperationsRef);
 		}
 		IntegrationNamespaceUtils.setReferenceIfAttributeDefined(builder, element, "sql-parameter-source-factory");
+		IntegrationNamespaceUtils.setValueIfAttributeDefined(builder, element, "payload-as-parameter-source",
+				"usePayloadAsParameterSource");
 		IntegrationNamespaceUtils.setReferenceIfAttributeDefined(builder, element, "prepared-statement-setter");
 		builder.addConstructorArgValue(query);
 		return builder.getBeanDefinition();
